tests/tests/ui/migrate_missing_toasty_toml.rs
fn main() {
    let _ = toasty::migrate!("nonexistent/path/Toasty.toml");
}
